--- a/res/layout-port/main_activity.xml
+++ b/res/layout-port/main_activity.xml
@@ -10,6 +10,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.te.tutorial.MainActivity" >
 
+    <TextView
+    	android:id="@+id/see_me"
+    	android:layout_width="wrap_content"
+    	android:layout_height="wrap_content"
+    	android:text="@string/hello_android"
+    	android:textSize="30sp" />
+
     <Button
         android:id="@+id/press_me"
         android:layout_width="wrap_content"
