Added nested menu items to twitter menu for demo purposes.
Currently these are caught by the default case in the menu handler and
get posted via Toast.

--- a/res/menu/base_activity.xml
+++ b/res/menu/base_activity.xml
@@ -19,8 +19,29 @@
     	android:title="@string/twitter"
     	android:icon="@drawable/twitter_icon"
     	android:orderInCategory="2"
-    	android:showAsAction="always"
-    />
+    	android:showAsAction="always" >
+    	<menu android:title="@string/twitter_4">
+    		<item android:id="@+id/twitter_1"
+    			android:title="@string/twitter_1" />
+    		<item android:id="@+id/twitter_2"
+    			android:title="@string/twitter_2" />
+    		<item android:id="@+id/twitter_3"
+    			android:title="@string/twitter_3" />
+    		<item android:id="@+id/twitter_4"
+    			android:title="@string/twitter_4" >
+                <menu android:title="@string/twitter_4">
+                    <item android:id="@+id/twitter_4_1"
+                        android:title="@string/twitter_4_1" />
+                    <item android:id="@+id/twitter_4_2"
+                        android:title="@string/twitter_4_2" />
+                    <item android:id="@+id/twitter_4_3"
+                        android:title="@string/twitter_4_3" />
+                    <item android:id="@+id/twitter_4_4"
+                        android:title="@string/twitter_4_4" />
+                </menu>
+            </item>
+    	</menu>
+    </item>
     <item android:id="@+id/refresh"
     	android:title="@string/refresh"
     	android:orderInCategory="3"
